# bvh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  data_analysis.ipynb  generate_sphere.py  image.ppm  sponza.yaml
example/: example_basic_usage.cpp  example_bvh_instancing.cpp  example_tlas.cpp  example_triangle_triangle_intersection.cpp
examples/: CMakeLists.txt
examples/multi_threaded/: CMakeLists.txt  main.cpp
examples/pathtracing/: CMakeLists.txt  camera.hpp  common.hpp  config.hpp  image.hpp  main.cpp  material.hpp  random.hpp  render.hpp  sampler.hpp  scene.hpp
examples/simple/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
include/: bvh.h  general_utils.h  timer.h  triangle_triangle_intersection.h
includes/bvh/: aabb.hpp  bvh.hpp  presplitting.hpp  ray.hpp  test.hpp  tlas.hpp  traversal.hpp
src/: aabb.cpp  aabb.hpp  algebra.hpp  blas_instance.hpp  bvh.cpp  bvh.h  bvh.hpp  bvh_traversal.hpp  camera.hpp  common.hpp  ecs.hpp  image.hpp  main.cpp  model.cpp  model.hpp  postprocessing.hpp  random.hpp  ray.hpp  render.hpp  serilisation.hpp  test.cpp  tiny_obj_loader.hpp  tlas.cpp  transform.hpp  traversal.cpp  triangle.hpp  utils.hpp
